Closed Bug 384426 Opened 18 years ago Closed 18 years ago

Description relations no longer exposed

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: aaronlev, Assigned: aaronlev)

References

(Blocks 1 open bug)

Details

(Keywords: access)

On http://www.mozilla.org/access/dhtml/button there is a description for the groupbox and the button. Neither description is exposing the description for relation, and the button does not have a describedby relation. The only thing that's working is the describedby on the fieldset.
I accidentally posted the fix for this in bug 371048. It has r+
Fixed via patch posted to bug 371048.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.