Bug 384426. Description relations not getting exposed. r=surkov